<resources>
    <string name="app_name">Financial Sobriety</string>
    <string name="really_delete_transaction">Are you sure you want to delete this transaction?</string>
    <string name="confirm_deletion">Confirm deletion</string>
    <string name="cancel_action">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no_items">There is no items</string>
    <string name="choose_category">Choose category</string>
    <string name="choose_debt">Choose debt</string>
    <string name="choose_date">Choose date</string>
    <string name="have_already_debt_with_such_name">You already have debt with such name</string>
    <string name="have_already_category_with_such_name">You already have category with such name</string>
    <string name="no_categories">There is no categories</string>
    <string name="undo">UNDO</string>
    <string name="category_deleted">Category irrevocably deleted</string>
    <string name="debt_deleted">Debt irrevocably deleted</string>
    <string name="debts">Debts</string>
    <string name="delete_content">Delete content</string>
    <string name="new_category">New category</string>
    <string name="edit_category">Edit category</string>




    <string name="jan">JAN</string>
    <string name="feb">FEB</string>
    <string name="mar">MAR</string>
    <string name="apr">APR</string>
    <string name="may">MAY</string>
    <string name="jun">JUN</string>
    <string name="jul">JUL</string>
    <string name="aug">AUG</string>
    <string name="sep">SEP</string>
    <string name="oct">OCT</string>
    <string name="nov">NOV</string>
    <string name="dec">DEC</string>
    <string name="category_saved">Category saved</string>
    <string name="category_updated">Category updated</string>
    <string name="category_fully_deleted">Category deleted with all its content</string>
    <string name="content_relocated">All the content of deleted category has been successfully relocated to another category</string>
    <string name="move_content_to_category">Move all transactions from deleted category to category</string>
    <string name="income">Income</string>
    <string name="outcome">Outcome</string>
    <string name="enter_category_name">Enter category name</string>
    <string name="new_debt">Add debt</string>
    <string name="edit_debt">Edit debt</string>
    <string name="data_for">Data for</string>
    <string name="for_">For</string>
    <string name="balance_for">Balance for</string>
    <string name="new_spend">New spending</string>
    <string name="new_income">New income</string>
    <string name="edit_">Edit</string>
    <string name="transaction_deleted">Transaction deleted for good</string>
    <string name="category_">Category…</string>
    <string name="sum">Sum</string>
    <string name="hint_sum">0.0</string>
    <string name="comment_not_neccessary">Comment (not necessary)</string>
    <string name="no_debt_chosen">No debt chosen</string>
    <string name="you_can_reduce_your_debt">You can reduce debt by the sum entered. For this, choose the debt.</string>
    <string name="ok">OK</string>
    <string name="total_debt_sum_is_">Total debt sum is</string>
    <string name="you_gonna_delete_category">You\'re going to delete category. Which another category you want to move all it\'s transactions to?</string>
    <string name="delete_all_content">Delete all category\'s transactions</string>
    <string name="cancel_deletion">Cancel deletion</string>
    <string name="enter_category_name_and_type">Enter category name and type</string>
    <string name="category_name">Category name</string>
    <string name="enter_name_and_sum_of_debt_or_credit">Enter name and sum of debt or credit</string>
    <string name="debt_name">Debt name</string>
    <string name="categories">Categories</string>
    <string name="journal">Journal</string>
    <string name="home">Home</string>
    <string name="no_categories_to_display">Categories to display not chosen</string>
    <string name="for_today">For today</string>
    <string name="list">List</string>
    <string name="diagram">Monthly</string>
    <string name="bar_chart">Annual</string>
    <string name="filter_by_category">Filter by category</string>
    <string name="show_income">Show income</string>
    <string name="show_outcome">Show outcome</string>
    <string name="in_this_month">In this month:</string>
    <string name="edit_transaction">Edit transaction</string>
    <string name="outcome_accusative"> outcome</string>
    <string name="income_accusative"> income</string>
    <string name="show_outcome_categories">Outcome categories</string>
    <string name="show_income_categories">Income categories</string>
    <string name="export_to_csv">Export to CSV</string>
    <string name="import_from_csv">Import from CSV</string>

</resources>