<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.debt.EditDebtFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="24dp"
                android:paddingBottom="80dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_name_and_sum_of_debt_or_credit"
                    android:textSize="20sp"
                    android:id="@+id/tv_title"
                    android:textAlignment="center"
                    android:padding="16dp"
                    android:textColor="@color/blue"
                    android:textStyle="italic"
                    android:layout_marginVertical="24dp"/>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    app:cardCornerRadius="6dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_debt_name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/debt_name"
                        android:layout_marginTop="3dp"
                        android:textColorHint="?android:textColorHint"
                        app:layout_constraintBottom_toBottomOf="@+id/spFromCurrency"
                        app:layout_constraintEnd_toStartOf="@+id/spFromCurrency"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/spFromCurrency">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_debt_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/blue"
                            android:textSize="20sp"
                            android:textStyle="italic"
                            android:background="@color/white"
                            android:inputType="textMultiLine|textCapSentences"
                            android:padding="10dp"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    app:cardCornerRadius="6dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_debt_sum"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sum"
                        android:layout_marginTop="3dp"
                        android:textColorHint="?android:textColorHint"
                        app:layout_constraintBottom_toBottomOf="@+id/spFromCurrency"
                        app:layout_constraintEnd_toStartOf="@+id/spFromCurrency"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/spFromCurrency">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_debt_sum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/blue"
                            android:textSize="20sp"
                            android:textStyle="italic"
                            android:background="@color/white"
                            android:inputType="numberDecimal"
                            android:padding="10dp"/>

                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="32dp"
        android:src="@drawable/ic_check"
        app:backgroundTint="@color/blue"
        app:borderWidth="0dp"
        app:tint="@color/white" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>