<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/subtle_blue"
    android:paddingHorizontal="16dp"
    android:paddingVertical="40dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.HomeFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl_balance"
            android:layout_marginVertical="24dp"
            android:padding="12dp">

            <TextView
                android:id="@+id/tv_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                tools:text="Баланс за июнь:"
                android:textColor="@color/black"
                android:textSize="19sp" />


            <TextView
                android:id="@+id/tv_balance_sum_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_balance"
                android:layout_centerHorizontal="true"
                android:text="0,00"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="italic|bold" />
        </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_central"
        android:layout_marginHorizontal="16dp"
        android:layout_centerInParent="true">

    <FrameLayout
        android:id="@+id/frame_layout_spend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_spend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="48dp"
                android:padding="12dp">

                <TextView
                    android:id="@+id/tv_spends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outcome"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/tv_spends"
                    android:layout_alignParentEnd="true"
                    android:text=""
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_spends"
                    android:layout_marginTop="8dp"
                    android:text="За июнь:"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/tv_sum_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/tv_month"
                    android:layout_alignParentEnd="true"
                    android:text="0,00"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    android:textStyle="italic|bold" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_spend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_add"
            app:backgroundTint="@color/blue"
            app:borderWidth="0dp"
            app:tint="@color/white" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_layout_income"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/frame_layout_spend"
        android:layout_marginVertical="12dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_income"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="48dp"
                android:padding="12dp">

                <TextView
                    android:id="@+id/tv_income"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_income_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/tv_income"
                    android:layout_alignParentEnd="true"
                    android:text=""
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_income_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_income"
                    android:layout_marginTop="8dp"
                    android:text="За июнь:"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/tv_income_sum_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/tv_income_month"
                    android:layout_alignParentEnd="true"
                    android:text="0,00"
                    android:textColor="@color/green"
                    android:textSize="20sp"
                    android:textStyle="italic|bold" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_add"
            app:backgroundTint="@color/green"
            app:borderWidth="0dp"
            app:tint="@color/white" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_layout_debt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/frame_layout_income"
        android:layout_marginVertical="12dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_debt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="48dp"
                android:padding="12dp">

                <TextView
                    android:id="@+id/tv_debt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_debt_sum_is_"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_debt_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/tv_debt"
                    android:layout_alignParentEnd="true"
                    android:text=""
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_debt_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_debt"
                    android:layout_marginTop="8dp"
                    android:text="@string/for_today"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/tv_debt_sum_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/tv_debt_month"
                    android:layout_alignParentEnd="true"
                    android:text="0,00"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    android:textStyle="italic|bold" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>



        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_debt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:src="@drawable/ic_add"
            app:backgroundTint="@color/blue"
            app:borderWidth="0dp"
            app:tint="@color/white" />
    </FrameLayout>

    </RelativeLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_central"
        android:id="@+id/view_pager_home"
        android:layout_toEndOf="@+id/iv_left"
        android:layout_toStartOf="@+id/iv_right"
        />

    <ImageView
        android:id="@+id/iv_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_left"
        android:layout_below="@id/layout_central"
        android:layout_alignParentStart="true"
        />

    <ImageView
        android:id="@+id/iv_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_right"
        android:layout_below="@id/layout_central"
        android:layout_alignParentEnd="true"
        />


</RelativeLayout>